--- a/.github/workflows/rbac-tests.yml
+++ b/.github/workflows/rbac-tests.yml
@@ -25,8 +25,10 @@ jobs:
         id: cache-nuclei
         uses: actions/cache@v2
         with:
-          path: ${{ env.HOME }}/.cache/go-build
-          key: ${{ runner.os }}-nuclei-${{ hashFiles('go.mod') }}
+          path: |
+            ${{ env.HOME }}/.cache/go-build
+            ${{ env.HOME }}/go/pkg/mod
+          key: ${{ runner.os }}-nuclei-${{ hashFiles('go.sum') }}
           restore-keys: |
             ${{ runner.os }}-nuclei-
 
@@ -48,23 +50,17 @@ jobs:
 
       - name: Wait for NPM server to be ready
         run: |
-          until $(curl --output /dev/null --silent --head --fail http://localhost:3000); do
+          until curl --output /dev/null -s --head http://127.0.0.1:3000; do
             sleep 1
           done
 
-      - name: Extract USER Token
-        env:
-          PASSWORD: ${{ secrets.USER_PASSWORD_SECRET }}
+      - name: Extract JWTs
         run: |
-          token=$(curl -s http://localhost:3000/api/login --data '{"username":"user1", "password":"'"$PASSWORD"'"}' -H "Content-Type: application/json" | jq -r '.token')
-          echo "TOKEN_USER=$token" >> $GITHUB_ENV
-
-      - name: Extract ADMIN Token
-        env:
-          PASSWORD: ${{ secrets.ADMIN_PASSWORD_SECRET }}
-        run: |
-          token=$(curl -s http://localhost:3000/api/login --data '{"username":"admin1", "password":"'"$PASSWORD"'"}' -H "Content-Type: application/json" | jq -r '.token')
-          echo "TOKEN_ADMIN=$token" >> $GITHUB_ENV
+          token_user=$(curl -s http://localhost:3000/api/login --data '{"username":"user1", "password":"password"}' -H "Content-Type: application/json" | jq -r '.token')
+          echo "TOKEN_USER=$token_user" >> $GITHUB_ENV
+          
+          token_admin=$(curl -s http://localhost:3000/api/login --data '{"username":"admin1", "password":"password"}' -H "Content-Type: application/json" | jq -r '.token')
+          echo "TOKEN_ADMIN=$token_admin" >> $GITHUB_ENV
 
       - name: Run Nuclei Tests
         run: |
