--- a/.github/workflows/rbac-tests.yml
+++ b/.github/workflows/rbac-tests.yml
@@ -5,6 +5,13 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      debug_enabled:
+        type: boolean
+        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
+        required: false
+        default: false
 
 jobs:
   rbac-tests:
@@ -16,26 +23,18 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Cache Go dependencies
-        id: cache-go-deps
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.HOME }}/.cache/go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('go.mod') }}
-          restore-keys: ${{ runner.os }}-go-
+        uses: actions/checkout@v3
 
       - name: Install Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '>=1.20.0'
 
       - name: Install Nuclei
         run: go install -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei@latest
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
 
         with:
           node-version: ${{ matrix.node-version }}
@@ -48,6 +47,7 @@ jobs:
 
       - name: Wait for NPM server to be ready
         run: |
+          curl http://127.0.0.1:3000
           until curl --output /dev/null -s --head http://127.0.0.1:3000; do
             sleep 1
           done
@@ -62,6 +62,11 @@ jobs:
           token_admin=$(echo "$response_admin" | grep -oE '"token":"[^"]+' | cut -d':' -f2 | tr -d '"')
           echo "TOKEN_ADMIN=$token_admin" >> $GITHUB_ENV
 
-      - name: Run Nuclei Tests
+      # Enable tmate debugging of manually-triggered workflows if the input option was provided
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
+
+      - name: Run RBAC Tests
         run: |
           ./automated_tests/nuclei/scripts/run_tests.sh
