GH Workflow improvements and debugging

--- a/.github/workflows/rbac-tests.yml
+++ b/.github/workflows/rbac-tests.yml
@@ -3,8 +3,8 @@ name: Extract Token and Nuclei Scan
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+#  pull_request:
+#    branches: [ main ]
   workflow_dispatch:
     inputs:
       debug_enabled:
@@ -47,7 +47,6 @@ jobs:
 
       - name: Wait for NPM server to be ready
         run: |
-          curl http://127.0.0.1:3000
           until curl --output /dev/null -s --head http://127.0.0.1:3000; do
             sleep 1
           done
