--- a/.github/workflows/rbac-tests.yml
+++ b/.github/workflows/rbac-tests.yml
@@ -3,8 +3,8 @@ name: Extract Token and Nuclei Scan
 on:
   push:
     branches: [ main ]
-#  pull_request:
-#    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
     inputs:
       debug_enabled:
