Support the matrix UI in Markdown

--- a/.github/workflows/rbac-tests.yml
+++ b/.github/workflows/rbac-tests.yml
@@ -68,9 +68,23 @@ jobs:
 
       - name: Run RBAC Tests
         run: |
-          nuclei -t automated_tests/nuclei/templates -u http://127.0.0.1:3000 -var token_user=$TOKEN_USER -var token_admin=$TOKEN_ADMIN -j -silent -severity high "$@" > results.json
+          nuclei -t automated_tests/nuclei/templates -u http://127.0.0.1:3000 -var token_user=$TOKEN_USER -var token_admin=$TOKEN_ADMIN -j -silent -severity high > results.json
 
       - uses: actions/upload-artifact@v3
         with:
           name: RBAC Test Results
           path: results.json
+
+      - name: Commit files
+        if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' }}
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Update permissions matrix"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
