--- a/automated_tests/nuclei/templates/api/product/product-admin.yaml
+++ b/automated_tests/nuclei/templates/api/product/product-admin.yaml
@@ -1,4 +1,4 @@
-id: api-product-admin
+id: GET-api-product-admin
 
 info:
   name: Product admin
@@ -8,6 +8,8 @@ info:
 
   metadata:
     max-request: 1
+    rbac-role: 'admin'
+    rbac-method: 'GET'
 
 http:
   - method: GET
