--- a/.github/workflows/rbac-tests.yml
+++ b/.github/workflows/rbac-tests.yml
@@ -68,14 +68,23 @@ jobs:
 
       - name: Run RBAC Tests
         run: |
-          nuclei -t automated_tests/nuclei/templates -u http://127.0.0.1:3000 -var token_user=$TOKEN_USER -var token_admin=$TOKEN_ADMIN -j -silent -severity high > results.json
+          nuclei -t automated_tests/nuclei/templates -u http://127.0.0.1:3000 -var token_user=$TOKEN_USER -var token_admin=$TOKEN_ADMIN -silent -severity high -je results.json
 
       - uses: actions/upload-artifact@v3
         with:
           name: RBAC Test Results
           path: results.json
 
-      - name: Commit files
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          cache: 'pip' # caching pip dependencies
+      - run: pip install -r requirements.txt
+
+      - name: Generate RBAC Matrix Markdown
+        run: python automated_tests/utils/rbac-matrix-generator.py -t automated_tests/nuclei/templates -r results.json -om docs/permissions/MATRIX.md
+
+      - name: Commit Matrix
         if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' }}
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
