--- a/.github/workflows/rbac-tests.yml
+++ b/.github/workflows/rbac-tests.yml
@@ -79,10 +79,10 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip' # caching pip dependencies
-      - run: pip install -r requirements.txt
+      - run: pip install -r automated_tests/matrix_generator/requirements.txt
 
       - name: Generate RBAC Matrix Markdown
-        run: python automated_tests/utils/rbac-matrix-generator.py -t automated_tests/nuclei/templates -r results.json -om docs/permissions/MATRIX.md
+        run: python automated_tests/matrix_generator/main.py -t automated_tests/nuclei/templates -r results.json -om docs/permissions/MATRIX.md
 
       - name: Commit Matrix
         if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' }}
