--- a/.github/workflows/rbac-tests.yml
+++ b/.github/workflows/rbac-tests.yml
@@ -13,6 +13,11 @@ on:
         required: false
         default: false
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
   rbac-tests:
     runs-on: ubuntu-latest
